--- a/src/CFSISNetCoreAPI/appsettings.json
+++ b/src/CFSISNetCoreAPI/appsettings.json
@@ -1,16 +1,13 @@
 {
     "Data": {
         "useSqLite": "false",
-        "SqlServerConnectionString": "server=.;database=AlbumViewer;integrated security=true;MultipleActiveResultSets=true;App=AlbumViewer",
-        "xSqlServerConnectionString": "server=dev.west-wind.com;database=AlbumViewer;uid=albumviewer;pwd=rockon;MultipleActiveResultSets=true;App=AlbumViewer",
-        "LOCAL_SqlServerConnectionString": "server=.;database=AlbumViewer;integrated security=true;MultipleActiveResultSets=true;App=AlbumViewer",
-        "DOCKERHOST_SqlServerConnectionString": "server=110.0.75.1;database=AlbumViewer;uid=albumviewer;pwd=rockon;MultipleActiveResultSets=true;App=AlbumViewer"
+        "SqlServerConnectionString": "server=.;database=AlbumViewer;integrated security=true;MultipleActiveResultSets=true;App=AlbumViewer"
     },
 	"Application": {
 		"applicationName": "AlbumViewer",
 		"maxListItems": 15,
 		"emailSettings": {
-	        "mailServer": "", //smtp.lvh2.com",
+	        "mailServer": "",
 	        "useTls": false,
 	        "senderAddress": "",
 	        "senderName": "Chennai Foundation Administrator"
@@ -22,7 +19,7 @@
       "Default": "Information",
       "System": "Warning",
       "Microsoft": "Warning",
-      "Trace":  "Information" 
+      "Trace":  "Information"
     }
   }
 }
